Added NN model and autograd

--- a/neural_network_model.ipynb
+++ b/neural_network_model.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### Define the Class\n",
     "- Define the Neural Network Model as the subclass of `nn.Module` and initialize all layers at `__init__`.\n",
-    "- All of the classes that inherit `nn.Module` implement operations on the input data in the `forward` method."
+    "- All of the classes that inherit `nn.Module` implement operations on the input data in the `forward()` method."
    ]
   },
   {
@@ -223,7 +223,7 @@
     "#### nn.ReLU\n",
     "- Nonlinear Activation makes a complex map between input and output of the model.\n",
     "- Nonlinear Activation is applied after Linear Transformation, introducing nonlinearity, and helps Newral Networks learn many different phenomena.\n",
-    "- In this example, `nn.ReLU` is used between linear layers, but other activation functions with nonlinearity can also be introduced when creating the model."
+    "- In this example, `nn.ReLU` is used between Linear layers, but other activation functions with nonlinearity can also be introduced when creating the model."
    ]
   },
   {
